--- a/compiler/artifact-amd-llvm.toml
+++ b/compiler/artifact-amd-llvm.toml
@@ -28,6 +28,7 @@ include = [
   "lib/llvm/lib/*.bc",
   "lib/llvm/lib/*.ll",
   "lib/llvm/lib/*.modules.json",
+  "lib/llvm/include/c++/**",
 ]
 force_include = [
   "lib/llvm/lib/clang/**",
