--- a/.github/workflows/test_component.yml
+++ b/.github/workflows/test_component.yml
@@ -128,6 +128,12 @@ jobs:
         run: |
           python ./build_tools/print_driver_gpu_info.py
 
+      - name: Setup Additional Requirements
+        if: ${{ fromJSON(inputs.component).additional_requirements_files != '' }}
+        run: |
+          python ./build_tools/install_additional_requirements.py \
+            --requirements-files=${{ join(fromJSON(inputs.component).additional_requirements_files, ',') }}
+
       - name: Test
         timeout-minutes: ${{ fromJSON(inputs.component).timeout_minutes }}
         env:
