--- a/profiler/CMakeLists.txt
+++ b/profiler/CMakeLists.txt
@@ -122,8 +122,13 @@ endif(THEROCK_BUILD_TESTING)
     EXTERNAL_SOURCE_DIR "${THEROCK_ROCM_SYSTEMS_SOURCE_DIR}/projects/rocprofiler-compute"
     BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/rocprofiler-compute"
     BACKGROUND_BUILD
+    DEFAULT_GPU_TARGETS
+      gfx942
     CMAKE_ARGS
       -DHIP_PLATFORM=amd
+      -DENABLE_TESTS=${THEROCK_BUILD_TESTING}
+      -DINSTALL_TESTS=${THEROCK_BUILD_TESTING}
+      -DTEST_FROM_INSTALL=${THEROCK_BUILD_TESTING}
       -DCHECK_PYTHON_DEPS=OFF
     CMAKE_INCLUDES
       therock_explicit_finders.cmake
@@ -193,6 +198,7 @@ endif(THEROCK_BUILD_TESTING)
       doc
       lib
       run
+      test
     SUBPROJECT_DEPS
       aqlprofile
       rocprofiler-sdk
@@ -214,8 +220,6 @@ endif(THEROCK_BUILD_TESTING)
       aqlprofile
       rocprofiler-sdk
       rocprofiler-compute
-      roctracer
-      ${_rocprofiler_sdk_optional_deps}
   )
 
   ##############################################################################
