--- a/media-libs/CMakeLists.txt
+++ b/media-libs/CMakeLists.txt
@@ -47,6 +47,7 @@ if(THEROCK_ENABLE_ROCDECODE AND THEROCK_ENABLE_SYSDEPS_AMD_MESA)
     COMPONENTS
       dbg
       dev
+      doc
       lib
       test
     SUBPROJECT_DEPS
@@ -103,6 +104,7 @@ if(THEROCK_ENABLE_ROCJPEG AND THEROCK_ENABLE_SYSDEPS_AMD_MESA)
     COMPONENTS
       dbg
       dev
+      doc
       lib
       test
     SUBPROJECT_DEPS
